[package]
name = "rqoob"
description = "Flash utility for the Qoob Pro modchip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.hidapi]
version = "2.6.1"
default-features = false
features = ["linux-native", "windows-native"]
