[package]
name = "rqoob"
description = "Flash utility for the Qoob Pro modchip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_complete = "4.4.10"
indicatif = "0.17.8"

[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.hidapi]
version = "2.6.1"
default-features = false
features = ["linux-native", "windows-native"]
